# csound-externals

./: .cirrus.yml  .gitmodules  CMakeLists.txt
.github/workflows/: build.yml
chua/: CMakeLists.txt
fluidOpcodes/: CMakeLists.txt
hdf5/: CMakeLists.txt
py/: CMakeLists.txt
py/src/: pythonhelper.h  pythonopcodes.c  pythonopcodes.h
risset/chua/: risset.json
risset/chua/doc/: chuap.md
risset/hdf5/: install-dependencies-linux.py  install-dependencies-macos.sh  risset.json
risset/py/: install-dependencies-linux.py  install-dependencies-macos.sh  risset.json
