# Build chuap opcodes
option(BUILD_CHUA_OPCODES "Build the chua opcodes" ON)

if(${BUILD_CHUA_OPCODES})
    # find_package(EIGEN3)
    find_package (Eigen3 3.3 NO_MODULE)
    # check_deps(BUILD_CHUA_OPCODES EIGEN3_FOUND)
    if (TARGET Eigen3::Eigen)
    	message("-- Found Eigen3, building chua opcodes. Include dirs: ${EIGEN3_INCLUDE_DIR}")
		make_plugin(chua ChuaOscillator.cpp)
        target_include_directories(chua PRIVATE ${EIGEN3_INCLUDE_DIR})
		target_include_directories(chua PRIVATE ${CSOUND_INCLUDE_DIRS})
		# target_link_libraries(chua PRIVATE ${EIGEN_LIBRARIES})
		target_link_libraries(chua PRIVATE Eigen3::Eigen)
		if(APPLE)
	   		set_target_properties(chua PROPERTIES COMPILE_FLAGS "-Wno-unused-local-typedef")
		endif()
    endif()
endif()
