option(BUILD_FLUID_OPCODES "Build the fluidsynth opcodes" ON)

if(BUILD_FLUID_OPCODES)
	find_package(FLUIDSYNTH)
	if(FLUIDSYNTH_FOUND)
	    make_plugin(fluidOpcodes fluidOpcodes.cpp)
    	target_include_directories(fluidOpcodes PRIVATE ${FLUIDSYNTH_INCLUDE_DIR})
    	target_include_directories(fluidOpcodes PRIVATE ${CSOUND_INCLUDE_DIR})
    	target_link_libraries(fluidOpcodes ${FLUIDSYNTH_LIBRARIES})
	endif()
endif()
